[package]
edition = "2021"
name = "veemcss_parser"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
logos = "0.15.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
regex = "1.11.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
